# YourRights

./: README.md  requirements.txt
.devcontainer/: devcontainer.json
yourrights/: .gitignore  .railwayignore  Procfile  README.md  pyproject.toml  requirements.txt
yourrights/data/chroma_db/: chroma.sqlite3
yourrights/src/yourrights/: app.py  crew.py  main.py  rag_pipeline.py
yourrights/src/yourrights/config/: agents.yaml  tasks.yaml
yourrights/src/yourrights/tools/: rag_tool.py  tavily_tool.py
