[project]
name = "yourrights"
version = "0.1.0"
description = "YourRights using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7",
    "sentence-transformers>=5.6.0",
]

[project.scripts]
yourrights = "yourrights.main:run"
run_crew = "yourrights.main:run"
train = "yourrights.main:train"
replay = "yourrights.main:replay"
test = "yourrights.main:test"
run_with_trigger = "yourrights.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
